id -> computer_id
